# ATM-Interface

./: CMakeLists.txt  README.md  main.cpp
include/atm/: ATM.hpp
include/components/: CardReader.hpp
source/: main.cpp
